# axiom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  GEMINI.md  LICENSE  MILESTONES.md  Makefile  README.md  SECURITY.md  deny.toml  justfile
.claude/: settings.local.json
.codex/: README.md  settings.local.json
.codex/skills/: README.md
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.yml  feature_request.md  question.yml
architecture/: API_SURFACES.md  ARCHITECTURE.md
crates/analytics/: Cargo.toml
crates/analytics/src/: batch.rs  engine.rs  lib.rs  model.rs  storage.rs  training.rs
crates/application/: Cargo.toml
crates/application/src/: agents.rs  config.rs  evals.rs  main.rs  packs.rs  streaming.rs
crates/application/src/ui/: app.rs  views.rs
crates/auth/: Cargo.toml
crates/auth/src/: http_auth.rs  lib.rs
crates/auth/src/auth/: identity.rs
crates/auth/src/crypto/: field.rs  mod.rs
crates/auth/src/identity/: file.rs  mod.rs
crates/auth/src/secrets/: gcp.rs  mod.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  mod.rs  openraft_adapter.rs
crates/domain/: Cargo.toml
crates/domain/src/: ask_converge.rs  domain_invariants.rs  drafting.rs  drafting_llm.rs  eval_agent.rs  evals.rs  flow_governance.rs  form_filler.rs  lib.rs  llm_utils.rs  meeting_scheduler.rs  meeting_scheduler_llm.rs  mock.rs  resource_routing.rs  retrieval.rs  stress_tests.rs
crates/domain/src/packs/: data_metrics.rs  delivery.rs  knowledge.rs  mod.rs  money.rs  trust.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/knowledge/: Cargo.toml
crates/knowledge/benches/: vector_search.rs
crates/knowledge/src/: error.rs
crates/knowledge/src/agentic/: mod.rs  online.rs  reflexion.rs  sessions.rs  temporal.rs
crates/knowledge/src/core/: knowledge_base.rs  search.rs
crates/knowledge/src/embedding/: mod.rs  openai.rs
crates/knowledge/src/grpc/: server.rs
crates/knowledge/src/ingest/: markdown.rs  mod.rs  routing.rs
crates/knowledge/src/learning/: batch.rs  feedback.rs  gnn.rs  mod.rs
crates/knowledge/src/mcp/: handlers.rs  mod.rs  server.rs  types.rs
crates/knowledge/src/storage/: mod.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: client.rs  lib.rs  tests.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  types.rs
crates/mcp/src/client/: mod.rs
crates/mcp/src/server/: mod.rs  transport.rs
crates/nats/: Cargo.toml
crates/nats/src/: client.rs  lib.rs  mod.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs  logger.rs  mod.rs
crates/optimization/ortools-sys/: Cargo.toml  build.rs
crates/optimization/ortools-sys/src/: lib.rs
crates/pack/: Cargo.toml
crates/pack/src/: agent.rs  context.rs  effect.rs  fact.rs  invariant.rs  lib.rs
crates/pack/tests/compile_fail/: effect_no_facts_field.rs  effect_no_facts_field.stderr  fact_new_without_feature.rs  fact_struct_literal.rs  fact_struct_literal.stderr
crates/protocol/: Cargo.toml  build.rs
crates/protocol/proto/: converge.proto
crates/protocol/src/: lib.rs
crates/provider/: .env.example  Cargo.toml
crates/provider/config/: models.yaml
crates/provider/examples/: format_matrix.rs  live_chat.rs
crates/provider/src/: anthropic.rs  apertus.rs  baidu.rs  brave.rs  capability_registry.rs  common.rs  common_example.rs  contract.rs  convergence.rs  deepseek.rs  factory.rs  fake.rs  fallback.rs  fetch.rs  gemini.rs  grok.rs  kimi.rs  kong.rs  lib.rs  linkedin.rs  minmax.rs  mistral.rs  model_selection.rs  ocr.rs  ollama.rs  openai.rs  openrouter.rs  patent.rs  perplexity.rs  prompt.rs  provider_api.rs  qwen.rs  registry_loader.rs  search.rs  secret.rs  zhipu.rs
crates/provider/src/embedding/: mod.rs  qwen_vl.rs
crates/provider/src/graph/: memory.rs  mod.rs
crates/provider/src/llm/: anthropic.rs  error_classification.rs  format_contract.rs  gemini.rs  mistral.rs  mod.rs  openai.rs  openrouter.rs  resilient.rs  selection.rs
crates/provider/src/reranker/: mod.rs  qwen_vl.rs
crates/provider/src/tools/: config.rs  definition.rs  error.rs  graphql.rs  mcp.rs  mod.rs  openapi.rs  registry.rs  tool_aware.rs
crates/provider/src/vector/: lancedb.rs  memory.rs  mod.rs
crates/provider/tests/: live_endpoints.rs
crates/remote/: Cargo.toml  build.rs
crates/remote/proto/: converge.proto
crates/remote/src/: connection.rs  main.rs  streaming.rs
crates/tool/: Cargo.toml
crates/tool/src/: codegen.rs  compile.rs  gherkin.rs  guidance.rs  jtbd.rs  lib.rs  mock_llm.rs  predicate.rs  provider_bridge.rs  simulation.rs  truths.rs
crates/traits/: Cargo.toml
crates/traits/src/: agent.rs  backend.rs  capability.rs  context.rs  effect.rs  error.rs  fact.rs  invariant.rs  lib.rs  tests.rs
examples/: README.md
examples/custom-provider/: Cargo.toml
examples/custom-provider/src/: main.rs
examples/expense-approval/: Cargo.toml
examples/expense-approval/src/: main.rs
examples/local-inference/: Cargo.toml  README.md
examples/local-inference/src/: main.rs
kb/: Ecosystem.md  Home.md  INDEX.md  LOG.md
kb/Stack/: Burn.md  (+9 more)
schema/: intent-codec-applet.v1.d.ts  intent-codec-applet.v1.schema.json
scripts/: validate-security-docs.sh
src/: applet_manifest.rs  codegen.rs  compile.rs  gherkin.rs  guidance.rs  intent.rs  jtbd.rs  lib.rs  mock_llm.rs  policy_lens.rs  predicate.rs  provenance.rs  simulation.rs  truth_package.rs  truths.rs  validation_view.rs
tests/: atlas_integration_marquee.rs  calibration_persistence.rs  catalyst_biz_marquee.rs  converge_contract.rs  converge_observation_adapter.rs  escrow_release_marquee.rs  fathom_narrative_marquee.rs  folio_editor_marquee.rs  inkling_notes_marquee.rs  plumb_execution_marquee.rs  provenance_contract.rs  quorum_sense_marquee.rs  round_driven_marquee.rs  scout_sourcing_marquee.rs  triage_keeper_marquee.rs  uncovered_clause_calibration.rs  warden_compliance_marquee.rs
(+807 files in other folders)
