[package]
name = "axiom-truth"
version = "0.5.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/axiom"
description = "Axiom — the truth layer: validation, simulation, guidance, and policy lens"
documentation = "https://docs.rs/axiom-truth"
keywords = ["gherkin", "testing", "governance", "axiom", "truth"]
categories = ["development-tools", "development-tools::testing"]

[lib]
name = "axiom_truth"
path = "src/lib.rs"

[[bin]]
name = "cz"
path = "src/bin/cz/main.rs"

[dependencies]
converge-provider = { path = "../converge/crates/provider" }
converge-provider-api = { path = "../converge/crates/provider-api" }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full", "macros", "sync"] }
dotenv = "0.15"
gherkin = "0.14"
regex = "1.11"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.5"
syn = { version = "2", features = ["full", "parsing"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_async = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_field_names = "allow"
similar_names = "allow"
too_many_arguments = "allow"
match_same_arms = "allow"
wildcard_imports = "allow"
missing_fields_in_debug = "allow"

[profile.release]
codegen-units = 1
lto = true
