[package]
name = "axiom-truth"
version = "0.15.2"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/axiom"
description = "Axiom — the truth layer: JTBD decoding, truth packages, validation, verifier reports, and calibration"
documentation = "https://docs.rs/axiom-truth"
keywords = ["gherkin", "testing", "governance", "axiom", "truth"]
categories = ["development-tools", "development-tools::testing"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE",
  "/README.md",
  "/CHANGELOG.md",
  "/schema/**",
  "/src/**",
  "/tests/**",
  "/architecture/**",
  "/kb/Architecture/**",
  "/kb/Building/**",
  "/kb/Concepts/**",
  "/kb/Experiments/**",
  "/kb/Philosophy/**",
  "/kb/Workflow/**",
  "/kb/Home.md",
  "/kb/INDEX.md",
  "/kb/LOG.md",
]

[lib]
name = "axiom_truth"
path = "src/lib.rs"

[[bin]]
name = "cz"
path = "src/bin/cz/main.rs"

[dependencies]
converge-provider = "3.9.2"
converge-pack = "3.9.2"
converge-manifold-adapters = { version = "1.1.2", features = ["llm-all"] }
organism-pack = "1.9.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = ">=1.23.1, <2", features = ["full", "macros", "sync"] }
dotenvy = "0.15"
gherkin = "0.15"
regex = "1.11"
sha2 = "0.11"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
colored = "3.1.1"
chrono = { version = ">=0.4.20, <0.5", features = ["serde"] }
serde_yaml = "0.9"
async-trait = "0.1"
uuid = "1"

# Editor infrastructure
ropey = "2.0.0-beta.1"
tree-sitter = "0.26"

[dev-dependencies]
converge-kernel = "3.9.2"
organism-runtime = "1.9.3"
proptest = "1.5"
syn = { version = "2", features = ["full", "parsing"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
unused_async = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
format_push_string = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
too_many_arguments = "allow"
match_same_arms = "allow"
wildcard_imports = "allow"
missing_fields_in_debug = "allow"

[profile.release]
codegen-units = 1
lto = true
