[package]
name = "converge-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "LicenseRef-Proprietary"
publish = false
description = "Analytics and ML pipeline for Converge agents"

[dependencies]
polars.workspace = true
burn.workspace = true
ndarray.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
proptest.workspace = true
rand.workspace = true
reqwest.workspace = true
bincode.workspace = true

# Converge platform dependencies
converge-core.workspace = true
converge-domain.workspace = true
converge-provider.workspace = true

[lints]
workspace = true
