[package]
name = "converge-auth"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication, authorization, and cryptography for Converge"

[dependencies]
# Note: This crate needs its dependencies wired before it compiles.
# The source files were copied from converge-runtime and still reference
# crate::config, crate::error, etc. Those imports need refactoring.
#
# For now this crate exists to establish the boundary. The runtime still
# has the working copies. Migration will be incremental:
# 1. Define local error/config types
# 2. Update imports
# 3. Have converge-runtime depend on converge-auth
# 4. Remove the copies from runtime

serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
