[package]
name = "converge-consensus"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Raft consensus adapter for distributed Converge"

# Source files copied from converge-runtime/src/consensus/.
# Need import refactoring before this compiles standalone.

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
