[package]
name = "converge-kernel"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The curated in-process kernel API for Converge"
keywords = ["converge", "kernel", "engine", "runtime"]
categories = ["algorithms"]

[dependencies]
converge-core.workspace = true
converge-pack.workspace = true

[lints]
workspace = true
