[package]
name = "converge-ledger"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Append-only context ledger for Converge"

# Source files copied from converge-runtime/src/ledger/.
# Need import refactoring before this compiles standalone.

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
