[package]
name = "converge-mcp"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) client and server for Converge"
keywords = ["mcp", "model-context-protocol", "ai", "tools", "converge"]
categories = ["network-programming"]

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Server (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[features]
default = ["client", "server"]
client = []
server = ["dep:axum", "dep:tower", "dep:tower-http"]

[lints]
workspace = true
