[package]
name = "converge-nats"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NATS messaging adapter for Converge"

# Source files copied from converge-runtime/src/nats/.
# Need import refactoring before this compiles standalone.

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
