[package]
name = "converge-observability"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audit, telemetry, and metrics for Converge"

# Source files copied from converge-runtime.
# Need import refactoring before this compiles standalone.

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
