[package]
name = "converge-pack"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The strict authoring contract for Converge packs, suggestors, and invariants"
keywords = ["converge", "pack", "agent", "invariant"]
categories = ["algorithms"]

[dependencies]
serde.workspace = true
strum = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
strum = ["dep:strum"]
kernel-authority = []

[dev-dependencies]
serde_json.workspace = true
trybuild.workspace = true

[lints]
workspace = true
