[package]
name = "converge-protocol"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The generated protobuf and gRPC contract for Converge"
keywords = ["converge", "grpc", "protobuf", "protocol"]
categories = ["network-programming"]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
