[package]
name = "converge-provider"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider implementations for Converge"
documentation = "https://docs.rs/converge-provider"
keywords = ["llm", "ai", "provider", "converge"]
categories = ["api-bindings", "web-programming"]

[dependencies]
converge-core.workspace = true
converge-traits.workspace = true
converge-mcp = { workspace = true, features = ["client"] }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding = { workspace = true, optional = true }
regex-lite.workspace = true
base64.workspace = true
sha2.workspace = true
zeroize = { workspace = true, optional = true }

# Async runtime (for blocking on async in sync traits)
tokio = { workspace = true, optional = true }

# Optional dependencies for vector stores
lancedb = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = ["anthropic", "gemini", "openai", "registry", "brave"]

# Providers
anthropic = ["dep:reqwest", "dep:serde_json"]
gemini = ["dep:reqwest", "dep:serde_json"]
openai = ["dep:reqwest", "dep:serde_json"]
ollama = ["dep:reqwest", "dep:serde_json", "dep:tokio"]
qwen = ["dep:reqwest", "dep:serde_json"]
deepseek = ["dep:reqwest", "dep:serde_json"]
mistral = ["dep:reqwest", "dep:serde_json"]
perplexity = ["dep:reqwest", "dep:serde_json"]
grok = ["dep:reqwest", "dep:serde_json"]
kimi = ["dep:reqwest", "dep:serde_json"]
kong = ["dep:reqwest", "dep:serde_json"]
minmax = ["dep:reqwest", "dep:serde_json"]
baidu = ["dep:reqwest", "dep:serde_json", "dep:urlencoding"]
zhipu = ["dep:reqwest", "dep:serde_json"]
apertus = ["dep:reqwest", "dep:serde_json"]
brave = ["dep:reqwest", "dep:serde_json", "dep:urlencoding"]
patent = []
linkedin = []

# Registry and Matchmaking
registry = []

# Stores
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema", "dep:futures"]
qdrant = []
neo4j = []
all-vector = ["lancedb", "qdrant"]
all-stores = ["lancedb", "qdrant", "neo4j"]

# Security hardening (zeroize secrets on drop)
secure = ["dep:zeroize"]

# OCR providers
tesseract = []

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
wiremock.workspace = true
tokio.workspace = true

[lints]
workspace = true
