[package]
name = "converge-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "LicenseRef-Proprietary"
publish = false
description = "Converge runtime driver - connects to converge-runtime via gRPC"
documentation = "https://docs.rs/converge-remote"
keywords = ["converge", "grpc", "client", "streaming", "agentic"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "converge-remote"
path = "src/main.rs"

[dependencies]
# Converge crates
converge-client.workspace = true
converge-protocol.workspace = true

# Structured payloads
prost-types.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time
chrono.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
uuid.workspace = true
hostname.workspace = true

# Configuration
config.workspace = true
dotenv.workspace = true

[dev-dependencies]
tokio-test = "0.4"
proptest.workspace = true
test-case = "3"
mockall.workspace = true
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
wiremock.workspace = true

[features]
default = []
integration = []

[lints]
workspace = true
