[package]
name = "converge-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The public trait contract for the Converge platform — convergence engine traits and generic backend abstraction"
keywords = ["converge", "traits", "abstraction", "backend"]
categories = ["algorithms"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
