[package]
name = "converge-traits"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The public trait contract for the Converge platform — convergence engine traits and generic backend abstraction"
keywords = ["converge", "traits", "abstraction", "backend"]
categories = ["algorithms"]

[dependencies]
serde.workspace = true
strum = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = []
strum = ["dep:strum"]

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
