[package]
name = "converge-traits"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deprecated compatibility facade over converge-pack and converge-provider-api"
keywords = ["converge", "traits", "abstraction", "backend"]
categories = ["algorithms"]

[dependencies]
converge-pack.workspace = true
converge-provider-api.workspace = true

[features]
default = []
strum = ["converge-pack/strum"]

[lints]
workspace = true
