[package]
name = "example-custom-provider"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-core = { path = "../../crates/core" }
converge-traits = { path = "../../crates/traits" }
converge-provider = { path = "../../crates/provider", default-features = false }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
