[package]
name = "example-expense-approval"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-core = { path = "../../crates/core" }
converge-policy = { path = "../../crates/policy" }
converge-traits = { path = "../../crates/traits" }
converge-domain = { path = "../../crates/domain" }
serde = { workspace = true }
serde_json = { workspace = true }
