[package]
name = "ortools-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "Apache-2.0"
description = "FFI bindings to Google OR-Tools C++ library"
build = "build.rs"
links = "ortools"

[features]
default = []
# Enable linking against OR-Tools C++ library
# Requires OR-Tools to be built and available
link = []

[dependencies]

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[lints]
workspace = true
