[package]
name = "ortools-sys"
version.workspace = true
publish = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "FFI bindings to Google OR-Tools C++ library"
build = "build.rs"
links = "ortools"

[features]
default = []
# Enable linking against OR-Tools C++ library
# Requires OR-Tools to be built and available
link = []

[dependencies]

[build-dependencies]
cc = "1"
pkg-config = "0.3"

[lints]
workspace = true
